@@ -1,4 +1,4 @@
-package net.Alexxiconify.alexxAutoWarn.AlexxsAutoWarn;
+package net.Alexxiconify.alexxAutoWarn;
 
 import net.coreprotect.CoreProtect;
 import net.coreprotect.CoreProtectAPI;
@@ -8,42 +8,26 @@ import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.World;
-import org.bukkit.block.Action;
-import org.bukkit.block.Block;
-import org.bukkit.block.Chest;
-import org.bukkit.block.DoubleChest;
-import org.bukkit.block.Container;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.configuration.file.FileConfiguration;
-import org.bukkit.configuration.file.YamlConfiguration;
-import org.bukkit.configuration.serialization.ConfigurationSerializable;
-import org.bukkit.configuration.serialization.ConfigurationSerialization;
-import org.bukkit.configuration.serialization.SerializableAs;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
+import org.bukkit.event.block.Action;
 import org.bukkit.event.block.BlockPlaceEvent;
 import org.bukkit.event.player.PlayerBucketEmptyEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
-import org.bukkit.event.player.PlayerQuitEvent;
-import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.plugin.Plugin;
 import org.bukkit.plugin.java.JavaPlugin;
-import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -54,195 +38,108 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
-import java.util.logging.Level;
 import java.util.stream.Collectors;
 
-// Note: The STR."..." syntax is a Java 21+ String Template feature.
-// If your server uses an older Java version, you'll need to change these to traditional string concatenation.
-// e.g., getLogger().severe("World '" + worldName + "' not found for zone definition!");
-
-/**
- * Represents a defined AutoInform zone with two corners, a world, and a denial setting.
- * This class is immutable.
- */
-class AutoInformZone { // This class remains as it was, handling material-based actions
- private final String name;
- private final World world;
- private final Location corner1;
- private final Location corner2;
- private final boolean denyPlacement; // This field is for the old deny-placement logic
-
- /**
-  * Constructs a new AutoInformZone.
-  * @param name The unique name of the zone.
-  * @param world The world the zone is in.
-  * @param corner1 The first corner of the zone.
-  * @param corner2 The second corner of the zone.
-  * @param denyPlacement True if placement should be denied in this zone, false for alerts only.
-  * @throws NullPointerException if world, corner1, or corner2 are null.
-  */
- public AutoInformZone(@NotNull String name, @NotNull World world, @NotNull Location corner1, @NotNull Location corner2, boolean denyPlacement) {
-  this.name = Objects.requireNonNull(name, "Zone name cannot be null");
-  this.world = Objects.requireNonNull(world, "Zone world cannot be null");
-  this.corner1 = Objects.requireNonNull(corner1, "Zone corner1 cannot be null");
-  this.corner2 = Objects.requireNonNull(corner2, "Zone corner2 cannot be null");
-  this.denyPlacement = denyPlacement;
- }
-
- public String getName() { return name; }
- public World getWorld() { return world; }
- public Location getCorner1() { return corner1; }
- public Location getCorner2() { return corner2; }
- public boolean shouldDenyPlacement() { return denyPlacement; }
-
- /**
-  * Checks if a given location is within this zone's bounding box.
-  * The location must be in the same world as the zone.
-  * @param loc The location to check.
-  * @return true if the location is within the zone, false otherwise.
-  */
- public boolean contains(@NotNull Location loc) {
-  // Must be in the same world
-  if (!loc.getWorld().equals(this.world)) {
-   return false;
-  }
-
-  double x = loc.getX();
-  double y = loc.getY();
-  double z = loc.getZ();
-
-  double minX = Math.min(corner1.getX(), corner2.getX());
-  double minY = Math.min(corner1.getY(), corner2.getY());
-  double minZ = Math.min(corner1.getZ(), corner2.getZ());
-
-  double maxX = Math.max(corner1.getX(), corner2.getX());
-  double maxY = Math.max(corner1.getY(), corner2.getY());
-  double maxZ = Math.max(corner1.getZ(), corner2.getZ());
-
-  // Check if the location is within the bounding box defined by the two corners
-  return (x >= minX && x <= maxX) &&
-          (y >= minY && y <= maxY) &&
-          (z >= minZ && z <= maxZ);
- }
-
- @Override
- public boolean equals(Object o) {
-  if (this == o) return true;
-  if (o == null || getClass() != o.getClass()) return false;
-  AutoInformZone that = (AutoInformZone) o;
-  return denyPlacement == that.denyPlacement &&
-          name.equals(that.name) &&
-          world.equals(that.world) &&
-          corner1.equals(that.corner1) &&
-          corner2.equals(that.corner2);
- }
-
- @Override
- public int hashCode() {
-  return Objects.hash(name, world, corner1, corner2, denyPlacement);
- }
-}
-
-@SuppressWarnings("ALL") // Suppress warnings for Java 21+ preview features like String Templates
+// Removed @SuppressWarnings("ALL") as String Templates are no longer used
 public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecutor, TabCompleter {
 
  // --- Plugin Constants ---
- private static final String COMMAND_NAME = "autoinform"; // Changed command name
+ private static final String COMMAND_NAME = "autoinform";
  private static final String PERMISSION_ADMIN_SET = "autoinform.admin.set";
  private static final String PERMISSION_ALERT_RECEIVE = "autoinform.alert.receive";
+ private static final String PERMISSION_BYPASS = "autoinform.bypass";
  private static final String WAND_KEY_STRING = "ainform_wand";
  private static final String WAND_DISPLAY_NAME = ChatColor.GOLD + "" + ChatColor.BOLD + "AutoInform Zone Selector Wand";
  private static final List<String> WAND_LORE = Arrays.asList(
          ChatColor.GRAY + "Left-click: Set Position 1",
          ChatColor.GRAY + "Right-click: Set Position 2"
  );
- private static final String PLUGIN_PREFIX = ChatColor.RED + "[AutoInform] " + ChatColor.YELLOW;
+ // PLUGIN_PREFIX is no longer directly used for messages, as it's handled by getMessage()
+ // private static final String PLUGIN_PREFIX = ChatColor.RED + "[AutoInform] " + ChatColor.YELLOW;
+
+ // --- Configurable Messages ---
+ private final Map<String, String> messages = new HashMap<>();
 
 
  // --- Instance Variables ---
  private CoreProtectAPI coreProtectAPI;
- private final Map<String, AutoInformZone> definedZones = new HashMap<>(); // For material-based zones
- private final Set<Material> bannedMaterials = new HashSet<>(); // Global banned materials list
-
- // --- New fields for Region management (from Region.java, RegionSelection.java) ---
- private Map<String, Region> regions; // Stores all defined regions by name
- private Map<UUID, RegionSelection> playerSelections; // Stores ongoing region selections for players
-
- private final Map<UUID, Map<String, Map<String, Location>>> playerZoneSelections = new HashMap<>(); // Manual selections (for old zones)
- private final Map<UUID, Location> playerWandPos1 = new HashMap<>(); // Wand selections (for both zone types)
- private final Map<UUID, Location> playerWandPos2 = new HashMap<>(); // Wand selections (for both zone types)
+ private final Map<String, AutoInformZone> definedZones = new HashMap<>();
+ private final Set<Material> bannedMaterials = new HashSet<>();
+ private final Map<UUID, Map<String, Map<String, Location>>> playerZoneSelections = new HashMap<>();
+ private final Map<UUID, Location> playerWandPos1 = new HashMap<>();
+ private final Map<UUID, Location> playerWandPos2 = new HashMap<>();
  private NamespacedKey wandKey;
-
- // --- Custom config for messages.yml ---
- private File customConfigFile;
- private FileConfiguration customConfig;
-
 
  @Override
  public void onEnable() {
-  getLogger().info("AlexxAutoWarn plugin starting...");
-
-  // Register custom serializers for configuration.
-  // IMPORTANT: Must be called before loading config.
-  ConfigurationSerialization.registerClass(Region.class, "AlexxAutoWarnRegion");
-
   this.wandKey = new NamespacedKey(this, WAND_KEY_STRING);
+
+  saveDefaultConfig(); // Ensure config.yml exists before loading messages
+  loadMessagesFromConfig(); // Load messages first
+
   this.coreProtectAPI = getCoreProtectAPI();
 
   if (this.coreProtectAPI == null) {
-   getLogger().warning("CoreProtect API not found! Related functionality might be affected.");
+   getLogger().warning(getMessage("plugin-coreprotect-not-found"));
   } else {
-   getLogger().info("CoreProtect API hooked successfully.");
+   getLogger().info(getMessage("plugin-coreprotect-hooked"));
   }
 
-  saveDefaultConfig(); // Creates config.yml if it doesn't exist
-  loadCustomConfig(); // Load messages.yml
+  loadZonesFromConfig();
+  loadBannedMaterialsFromConfig();
 
-  loadZonesFromConfig(); // Load AutoInformZones
-  loadBannedMaterialsFromConfig(); // Load global banned materials
-
-  // --- Initialize and load new Region system ---
-  regions = new HashMap<>();
-  playerSelections = new HashMap<>();
-  loadRegions(); // Load Regions from config
-
-  // Register this class as the main listener for all events (including region events)
   Bukkit.getPluginManager().registerEvents(this, this);
-
   Objects.requireNonNull(getCommand(COMMAND_NAME)).setExecutor(this);
   Objects.requireNonNull(getCommand(COMMAND_NAME)).setTabCompleter(this);
 
-  getLogger().info("AlexxAutoWarn plugin enabled!");
+  getLogger().info(getMessage("plugin-enabled"));
   if (definedZones.isEmpty()) {
    getLogger().warning(getMessage("plugin-warning-no-zones-old").replace("{command}", COMMAND_NAME));
   } else {
    getLogger().info(getMessage("plugin-success-zones-loaded-old").replace("{count}", String.valueOf(definedZones.size())));
-  }
-  if (regions.isEmpty()) {
-   getLogger().warning(getMessage("plugin-warning-no-regions"));
-  } else {
-   getLogger().info(getMessage("plugin-success-regions-loaded").replace("{count}", String.valueOf(regions.size())));
   }
   getLogger().info(getMessage("plugin-current-banned-materials").replace("{materials}", formatMaterialList(bannedMaterials)));
  }
 
  @Override
  public void onDisable() {
-  getLogger().info("AlexxAutoWarn plugin shutting down...");
+  getLogger().info(getMessage("plugin-disabled"));
   playerZoneSelections.clear();
   playerWandPos1.clear();
   playerWandPos2.clear();
   definedZones.clear();
   bannedMaterials.clear();
-  playerSelections.clear();
-  saveRegions(); // Save regions on disable
-  regions.clear();
-  getLogger().info("AlexxAutoWarn plugin disabled!");
+  messages.clear();
  }
 
- /**
-  * Loads all AutoInform zones from the plugin's config.yml.
-  */
+ /** Loads all custom messages from config.yml. */
+ private void loadMessagesFromConfig() {
+  messages.clear();
+  FileConfiguration config = getConfig();
+
+  // Get and translate the plugin prefix first
+  String pluginPrefix = ChatColor.translateAlternateColorCodes('&', config.getString("plugin-prefix", "&c[AutoInform] &e"));
+  messages.put("plugin-prefix", pluginPrefix); // Store the processed prefix for direct access if needed
+
+  ConfigurationSection messagesSection = config.getConfigurationSection("messages");
+
+  if (messagesSection != null) {
+   for (String key : messagesSection.getKeys(false)) {
+    String rawMessage = Objects.requireNonNull(messagesSection.getString(key));
+    // Replace {plugin-prefix} placeholder in each message
+    String processedMessage = rawMessage.replace("{plugin-prefix}", pluginPrefix);
+    messages.put(key, ChatColor.translateAlternateColorCodes('&', processedMessage));
+   }
+  }
+ }
+
+ /** Gets a message from the loaded messages, with placeholders replaced. */
+ private String getMessage(String key) {
+  // Retrieve message directly from the map. It should already be colored and prefixed.
+  return messages.getOrDefault(key, ChatColor.RED + "Error: Message '" + key + "' not found in config.yml!");
+ }
+
+ /** Loads all AutoInform zones from config.yml. */
  private void loadZonesFromConfig() {
   definedZones.clear();
   FileConfiguration config = getConfig();
@@ -268,34 +165,43 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
    }
 
    try {
-    Location corner1 = new Location(world,
-            zoneConfig.getDouble("corner1.x"),
-            zoneConfig.getDouble("corner1.y"),
-            zoneConfig.getDouble("corner1.z"));
-    Location corner2 = new Location(world,
-            zoneConfig.getDouble("corner2.x"),
-            zoneConfig.getDouble("corner2.y"),
-            zoneConfig.getDouble("corner2.z"));
-    boolean denyPlacement = zoneConfig.getBoolean("deny-placement", false); // Read new field, default to false
+    Location corner1 = new Location(world, zoneConfig.getDouble("corner1.x"), zoneConfig.getDouble("corner1.y"), zoneConfig.getDouble("corner1.z"));
+    Location corner2 = new Location(world, zoneConfig.getDouble("corner2.x"), zoneConfig.getDouble("corner2.y"), zoneConfig.getDouble("corner2.z"));
 
-    definedZones.put(zoneName, new AutoInformZone(zoneName, world, corner1, corner2, denyPlacement));
-    getLogger().info(STR."Loaded zone '\{zoneName}' in world '\{worldName}' (Deny: \{denyPlacement}).");
+    // Load default action
+    ZoneAction defaultAction = ZoneAction.valueOf(zoneConfig.getString("default-material-action", "ALERT").toUpperCase());
+
+    // Load material-specific actions
+    Map<Material, ZoneAction> materialActions = new HashMap<>();
+    ConfigurationSection materialActionsSection = zoneConfig.getConfigurationSection("material-actions");
+    if (materialActionsSection != null) {
+     for (String materialName : materialActionsSection.getKeys(false)) {
+      try {
+       Material material = Material.valueOf(materialName.toUpperCase());
+       ZoneAction action = ZoneAction.valueOf(Objects.requireNonNull(materialActionsSection.getString(materialName)).toUpperCase());
+       materialActions.put(material, action);
+      } catch (IllegalArgumentException e) {
+       getLogger().warning("Invalid material or action type in zone '" + zoneName + "' for material '" + materialName + "'. Skipping."); // This message could also be moved to messages.yml
+      }
+     }
+    }
+
+    definedZones.put(zoneName, new AutoInformZone(zoneName, world, corner1, corner2, defaultAction, materialActions));
+    getLogger().info("Loaded zone '" + zoneName + "' in world '" + worldName + "' (Default Action: " + defaultAction + ")."); // This message could also be moved to messages.yml
    } catch (Exception e) {
     getLogger().severe(getMessage("plugin-error-loading-zone-coords").replace("{zone_name}", zoneName).replace("{message}", e.getMessage()));
    }
   }
  }
 
- /**
-  * Saves all currently defined AutoInform zones to the plugin's config.yml.
-  */
+ /** Saves all currently defined AutoInform zones to config.yml. */
  private void saveZonesToConfig() {
   FileConfiguration config = getConfig();
-  config.set("zones", null); // Clear existing zones section to rewrite it
+  config.set("zones", null);
 
   if (!definedZones.isEmpty()) {
    for (AutoInformZone zone : definedZones.values()) {
-    String path = STR."zones.\{zone.getName()}.";
+    String path = "zones." + zone.getName() + ".";
     config.set(path + "world", zone.getWorld().getName());
     config.set(path + "corner1.x", zone.getCorner1().getX());
     config.set(path + "corner1.y", zone.getCorner1().getY());
@@ -303,15 +209,22 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
     config.set(path + "corner2.x", zone.getCorner2().getX());
     config.set(path + "corner2.y", zone.getCorner2().getY());
     config.set(path + "corner2.z", zone.getCorner2().getZ());
-    config.set(path + "deny-placement", zone.shouldDenyPlacement()); // Save new field
+    config.set(path + "default-material-action", zone.getDefaultAction().name());
+
+    // Save material-specific actions
+    if (!zone.getMaterialSpecificActions().isEmpty()) {
+     zone.getMaterialSpecificActions().forEach((material, action) ->
+             config.set(path + "material-actions." + material.name(), action.name())
+     );
+    } else {
+     config.set(path + "material-actions", null); // Remove section if empty
+    }
    }
   }
   saveConfig();
  }
 
- /**
-  * Loads banned materials from the plugin's config.yml.
-  */
+ /** Loads banned materials from config.yml. */
  private void loadBannedMaterialsFromConfig() {
   bannedMaterials.clear();
   FileConfiguration config = getConfig();
@@ -319,70 +232,27 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
 
   for (String name : materialNames) {
    try {
-    Material material = Material.valueOf(name.toUpperCase());
-    bannedMaterials.add(material);
+    bannedMaterials.add(Material.valueOf(name.toUpperCase()));
    } catch (IllegalArgumentException e) {
     getLogger().warning(getMessage("plugin-invalid-banned-material-config").replace("{name}", name));
    }
   }
  }
 
- /**
-  * Saves currently banned materials to the plugin's config.yml.
-  */
+ /** Saves currently banned materials to config.yml. */
  private void saveBannedMaterialsToConfig() {
   FileConfiguration config = getConfig();
-  List<String> materialNames = bannedMaterials.stream()
-          .map(Enum::name)
-          .collect(Collectors.toList());
-  config.set("banned-materials", materialNames);
+  config.set("banned-materials", bannedMaterials.stream().map(Enum::name).collect(Collectors.toList()));
   saveConfig();
  }
 
- // --- New methods for region management ---
-
- // Load regions from config.yml
- private void loadRegions() {
-  // Ensure the "regions" section is separate from "zones"
-  if (getConfig().isConfigurationSection("regions")) {
-   for (String key : getConfig().getConfigurationSection("regions").getKeys(false)) {
-    try {
-     Object obj = getConfig().get("regions." + key);
-     if (obj instanceof Map) {
-      Map<String, Object> serializedRegion = (Map<String, Object>) obj;
-      Region region = (Region) ConfigurationSerialization.deserializeObject(serializedRegion, Region.class);
-      regions.put(region.getName(), region);
-      getLogger().info("Loaded region: " + region.getName());
-     } else {
-      getLogger().warning("Invalid region format for key: " + key);
-     }
-    } catch (Exception e) {
-     getLogger().log(Level.SEVERE, "Failed to load region: " + key, e);
-    }
-   }
-  }
- }
-
- // Save regions to config.yml
- private void saveRegions() {
-  getConfig().set("regions", null); // Clear existing regions section to prevent old data
-  for (Region region : regions.values()) {
-   getConfig().set("regions." + region.getName(), region); // Serialize Region object to config
-  }
-  saveConfig(); // Save the main config.yml
- }
-
-
- /**
-  * Attempts to get the CoreProtect API instance.
-  * @return The CoreProtectAPI instance, or null if not found or not enabled.
-  */
+ /** Attempts to get the CoreProtect API instance. */
  private CoreProtectAPI getCoreProtectAPI() {
   Plugin plugin = Bukkit.getPluginManager().getPlugin("CoreProtect");
   if (plugin instanceof CoreProtect coreProtect) {
    CoreProtectAPI api = coreProtect.getAPI();
    if (api != null && api.isEnabled()) {
-    if (api.APIVersion() < 10) { // Adjust API version check as needed
+    if (api.APIVersion() < 10) {
      getLogger().warning(getMessage("plugin-coreprotect-api-outdated").replace("{version}", String.valueOf(api.APIVersion())));
     }
     return api;
@@ -395,67 +265,56 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
   return null;
  }
 
- /**
-  * Creates and returns the AutoInform Zone Selector Wand item.
-  * @return The ItemStack representing the wand.
-  */
+ /** Creates the AutoInform Zone Selector Wand item. */
  private ItemStack createWand() {
   ItemStack wand = new ItemStack(Material.WOODEN_AXE);
   ItemMeta meta = wand.getItemMeta();
-
   if (meta != null) {
-   meta.setDisplayName(WAND_DISPLAY_NAME);
-   meta.setLore(WAND_LORE);
+   meta.setDisplayName(WAND_DISPLAY_NAME); // Uses constant, not message
+   meta.setLore(WAND_LORE); // Uses constant, not message
    meta.getPersistentDataContainer().set(wandKey, PersistentDataType.STRING, "true");
    wand.setItemMeta(meta);
   }
   return wand;
  }
 
- /**
-  * Checks if an ItemStack is the AutoInform Zone Selector Wand.
-  * @param item The ItemStack to check.
-  * @return true if it's the wand, false otherwise.
-  */
+ /** Checks if an ItemStack is the AutoInform Zone Selector Wand. */
  private boolean isWand(ItemStack item) {
-  return item != null && item.hasItemMeta() &&
-          Objects.requireNonNull(item.getItemMeta()).getPersistentDataContainer().has(wandKey, PersistentDataType.STRING);
+  return item != null && item.hasItemMeta() && Objects.requireNonNull(item.getItemMeta()).getPersistentDataContainer().has(wandKey, PersistentDataType.STRING);
  }
 
- /**
-  * Helper method to check if a location is within any defined AutoInformZone,
-  * inform staff/log, and determine if the event should be cancelled.
-  * @param player The player performing the action.
-  * @param location The location of the action.
-  * @param material The material being placed/used.
-  * @return true if the event should be cancelled (i.e., placement denied), false otherwise.
-  */
+ /** Processes banned material placement: logs, alerts staff, and determines if denied. */
  private boolean processBannedMaterialPlacement(Player player, Location location, Material material) {
-  if (!bannedMaterials.contains(material)) {
-   return false; // Not a banned material, so no action needed.
+  // If player has bypass permission, do nothing
+  if (player.hasPermission(PERMISSION_BYPASS)) {
+   return false;
   }
 
-  boolean shouldDeny = false;
-  AutoInformZone applicableZone = null; // Store the zone that caused the alert/denial
+  // Only proceed if the material is in the global banned list
+  if (!bannedMaterials.contains(material)) {
+   return false;
+  }
 
+  AutoInformZone applicableZone = null;
   for (AutoInformZone zone : definedZones.values()) {
    if (zone.contains(location)) {
     applicableZone = zone;
-    if (zone.shouldDenyPlacement()) {
-     shouldDeny = true; // If any zone says deny, we deny
-    }
-    // Don't break here, we still want to log/alert for the first matching zone
-    // and if multiple zones overlap, we deny if ANY of them deny.
-    break; // Found the first matching zone, no need to check others for logging/alerting
+    break; // Found the first matching zone
    }
   }
 
   if (applicableZone != null) {
-   String actionStatus = (shouldDeny ? "DENIED" : "ALERTED");
-   String logMessage = STR."Player \{player.getName()} attempted to place banned material \{material.name()} at \{formatLocation(location)} in protected zone '\{applicableZone.getName()}'. Action: \{actionStatus}.";
-   getLogger().info(logMessage); // Log to server console
+   ZoneAction action = applicableZone.getMaterialSpecificActions().getOrDefault(material, applicableZone.getDefaultAction());
 
-   String staffActionColor = (shouldDeny ? ChatColor.RED : ChatColor.YELLOW).toString();
+   if (action == ZoneAction.ALLOW) {
+    return false; // Explicitly allowed by zone, do nothing
+   }
+
+   String actionStatus = action == ZoneAction.DENY ? "DENIED" : "ALERTED";
+   // Log message to console
+   getLogger().info("Player " + player.getName() + " attempted to place banned material " + material.name() + " at " + formatLocation(location) + " in protected zone '" + applicableZone.getName() + "'. Action: " + actionStatus + ".");
+
+   String staffActionColor = action == ZoneAction.DENY ? ChatColor.RED.toString() : ChatColor.YELLOW.toString();
    String staffMessage = getMessage("staff-alert-message")
            .replace("{player}", player.getName())
            .replace("{material}", material.name())
@@ -470,15 +329,10 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
            .filter(staff -> staff.hasPermission(PERMISSION_ALERT_RECEIVE))
            .forEach(staff -> staff.sendMessage(staffMessage));
 
-   // Optional: Log with CoreProtect if you have custom flags or reasons
-   // if (this.coreProtectAPI != null) {
-   //    this.coreProtectAPI.logPlacement(player.getName(), location, material, null);
-   // }
+   return action == ZoneAction.DENY; // Cancel if DENY, otherwise don't
   }
-  return shouldDeny; // Return whether the event should be cancelled
+  return false; // No applicable zone
  }
-
- // --- Event Handlers (consolidated from RegionListener.java and existing handlers) ---
 
  @EventHandler
  public void onPlayerEmptyBucket(PlayerBucketEmptyEvent event) {
@@ -491,31 +345,9 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
 
  @EventHandler
  public void onBlockPlace(BlockPlaceEvent event) {
-  Player player = event.getPlayer();
-  Block placedBlock = event.getBlockPlaced();
-
-  // First, check for AutoInformZone (global banned materials + deny-placement option)
-  if (processBannedMaterialPlacement(player, placedBlock.getLocation(), placedBlock.getType())) {
+  if (processBannedMaterialPlacement(event.getPlayer(), event.getBlock().getLocation(), event.getBlock().getType())) {
    event.setCancelled(true);
-   player.sendMessage(getMessage("player-denied-placement").replace("{material}", placedBlock.getType().name()));
-   return; // If denied by AutoInformZone, no need to check Region system
-  }
-
-  // Then, check for custom regions (alexxautowarn.region.bypass)
-  if (player.hasPermission("alexxautowarn.region.bypass")) {
-   return;
-  }
-
-  for (Region region : regions.values()) {
-   if (region.contains(placedBlock.getLocation())) {
-    if (region.getBannedBlockPlacement().contains(placedBlock.getType())) {
-     player.sendMessage(getMessage("region-banned-block-placement")
-             .replace("{block}", placedBlock.getType().name())
-             .replace("{region}", region.getName()));
-     event.setCancelled(true);
-     return;
-    }
-   }
+   event.getPlayer().sendMessage(getMessage("player-denied-placement").replace("{material}", event.getBlock().getType().name()));
   }
  }
 
@@ -523,104 +355,44 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
  public void onPlayerInteract(PlayerInteractEvent event) {
   Player player = event.getPlayer();
   ItemStack handItem = event.getItem();
-  Block clickedBlock = event.getClickedBlock();
 
-  // Handle wand interactions first
   if (isWand(handItem)) {
    event.setCancelled(true); // Always cancel wand interactions to prevent accidental block changes
 
    if (event.getAction() == Action.LEFT_CLICK_BLOCK) {
-    if (clickedBlock != null) {
-     playerWandPos1.put(player.getUniqueId(), clickedBlock.getLocation());
-     player.sendMessage(getMessage("player-wand-pos1-set").replace("{location}", formatLocation(clickedBlock.getLocation())));
+    if (event.getClickedBlock() != null) {
+     playerWandPos1.put(player.getUniqueId(), event.getClickedBlock().getLocation());
+     player.sendMessage(getMessage("player-wand-pos1-set").replace("{location}", formatLocation(event.getClickedBlock().getLocation())));
     } else {
      player.sendMessage(getMessage("player-wand-click-block").replace("{pos_num}", "1"));
     }
    } else if (event.getAction() == Action.RIGHT_CLICK_BLOCK) {
-    if (clickedBlock != null) {
-     playerWandPos2.put(player.getUniqueId(), clickedBlock.getLocation());
-     player.sendMessage(getMessage("player-wand-pos2-set").replace("{location}", formatLocation(clickedBlock.getLocation())));
+    if (event.getClickedBlock() != null) {
+     playerWandPos2.put(player.getUniqueId(), event.getClickedBlock().getLocation());
+     player.sendMessage(getMessage("player-wand-pos2-set").replace("{location}", formatLocation(event.getClickedBlock().getLocation())));
     } else {
      player.sendMessage(getMessage("player-wand-click-block").replace("{pos_num}", "2"));
     }
    }
-   return; // Don't process other interactions if it's the wand
+   return;
   }
 
-  // Handle placement of items that spawn entities (like TNT Minecart) from global banned materials
+  // Handle placement of items that spawn entities (like TNT Minecart)
   if (handItem != null && bannedMaterials.contains(handItem.getType()) && event.getAction() == Action.RIGHT_CLICK_BLOCK) {
-   if (handItem.getType() == Material.TNT_MINECART && clickedBlock != null && clickedBlock.getType().name().contains("RAIL")) {
-    Location placementLocation = clickedBlock.getLocation().add(0, 1, 0);
+   if (handItem.getType() == Material.TNT_MINECART && event.getClickedBlock() != null && event.getClickedBlock().getType().name().contains("RAIL")) {
+    Location placementLocation = event.getClickedBlock().getLocation().add(0, 1, 0);
     if (processBannedMaterialPlacement(player, placementLocation, Material.TNT_MINECART)) {
      event.setCancelled(true);
      player.sendMessage(getMessage("player-denied-placement").replace("{material}", Material.TNT_MINECART.name()));
     }
    }
   }
-
-  // --- Handle Custom Region Interactions ---
-  if (player.hasPermission("alexxautowarn.region.bypass")) {
-   return;
-  }
-
-  // Handle Chest Interactions
-  if (event.getAction().name().contains("RIGHT_CLICK") && clickedBlock != null) {
-   InventoryHolder holder = null;
-   if (clickedBlock.getState() instanceof Chest) {
-    holder = ((Chest) clickedBlock.getState());
-   } else if (clickedBlock.getState() instanceof Container) {
-    holder = (Container) clickedBlock.getState();
-   }
-
-   if (holder != null) {
-    if (holder instanceof DoubleChest) {
-     holder = ((DoubleChest) holder).getRightSide();
-    }
-
-    for (Region region : regions.values()) {
-     if (region.contains(clickedBlock.getLocation())) {
-      if (region.isBanChestInteraction()) {
-       player.sendMessage(getMessage("region-banned-chest-interaction")
-               .replace("{region}", region.getName()));
-       event.setCancelled(true);
-       return;
-      }
-     }
-    }
-   }
-  }
-
-  // Handle Item Usage (e.g., eating, ender pearl throws, potion drinking)
-  if (event.getAction().name().contains("RIGHT_CLICK") && handItem != null && handItem.getType() != Material.AIR) {
-   for (Region region : regions.values()) {
-    if (region.contains(player.getLocation())) { // Check if player is *in* the region
-     if (region.getBannedItemUsage().contains(handItem.getType())) {
-      player.sendMessage(getMessage("region-banned-item-usage")
-              .replace("{item}", handItem.getType().name())
-              .replace("{region}", region.getName()));
-      event.setCancelled(true);
-      return;
-     }
-    }
-   }
-  }
- }
-
- @EventHandler
- public void onPlayerQuit(PlayerQuitEvent event) {
-  playerSelections.remove(event.getPlayer().getUniqueId());
-  playerWandPos1.remove(event.getPlayer().getUniqueId());
-  playerWandPos2.remove(event.getPlayer().getUniqueId());
-  playerZoneSelections.remove(event.getPlayer().getUniqueId()); // Clear old zone selections too
  }
 
  @Override
  public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-  if (!command.getName().equalsIgnoreCase(COMMAND_NAME) && !command.getName().equalsIgnoreCase("autoinform") && !command.getName().equalsIgnoreCase("aw")) {
-   return false;
-  }
+  if (!command.getName().equalsIgnoreCase(COMMAND_NAME) && !command.getName().equalsIgnoreCase("ainform")) return false;
 
-  // Console reload command
   if (!(sender instanceof Player player)) {
    if (args.length == 1 && args[0].equalsIgnoreCase("reload")) {
     handleReloadCommand(sender);
@@ -630,8 +402,7 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
    return true;
   }
 
-  // Player commands require permission
-  if (!player.hasPermission(PERMISSION_ADMIN_SET) && !player.hasPermission("alexxautowarn.region.admin")) {
+  if (!player.hasPermission(PERMISSION_ADMIN_SET)) {
    player.sendMessage(getMessage("player-no-permission"));
    return true;
   }
@@ -643,43 +414,19 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
 
   String subCommand = args[0].toLowerCase();
   switch (subCommand) {
-   case "wand":
-    handleWandCommand(player);
-    break;
+   case "wand": handleWandCommand(player); break;
    case "pos1":
-   case "pos2":
-    handlePosCommand(player, subCommand, args);
-    break;
-   case "define":
-    handleDefineCommand(player, args);
-    break;
-   case "remove":
-    handleRemoveCommand(player, args);
-    break;
-   case "info":
-    handleInfoCommand(player, args);
-    break;
-   case "list":
-    handleListCommand(player);
-    break;
-   case "reload":
-    handleReloadCommand(player);
-    break;
-   case "clearwand":
-    handleClearWandCommand(player);
-    break;
-   case "banned":
-    handleBannedCommand(player, args);
-    break;
-   case "deny": // New command to toggle deny-placement for old zones
-    handleDenyCommand(player, args);
-    break;
-   case "region": // New command handler for the consolidated region management
-    handleRegionCommand(player, Arrays.copyOfRange(args, 1, args.length));
-    break;
-   default:
-    sendHelpMessage(player);
-    break;
+   case "pos2": handlePosCommand(player, subCommand, args); break;
+   case "define": handleDefineCommand(player, args); break;
+   case "remove": handleRemoveCommand(player, args); break;
+   case "info": handleInfoCommand(player); break; // Modified to remove args for info command
+   case "list": handleListCommand(player); break;
+   case "reload": handleReloadCommand(player); break;
+   case "clearwand": handleClearWandCommand(player); break;
+   case "banned": handleBannedCommand(player, args); break;
+   case "defaultaction": handleDefaultActionCommand(player, args); break;
+   case "setaction": handleSetActionCommand(player, args); break;
+   default: sendHelpMessage(player); break;
   }
   return true;
  }
@@ -693,39 +440,36 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
 
  private void handlePosCommand(Player player, String posType, String[] args) {
   if (args.length < 2) {
-   player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} \{posType} <zone_name>"));
+   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " " + posType + " <zone_name>"));
    return;
   }
   String zoneNameForPos = args[1];
-  playerZoneSelections
-          .computeIfAbsent(player.getUniqueId(), k -> new HashMap<>())
-          .computeIfAbsent(zoneNameForPos, k -> new HashMap<>())
-          .put(posType, player.getLocation());
-  player.sendMessage(getMessage("player-wand-pos1-set").replace("{location}", formatLocation(player.getLocation()))); // Reusing pos1/pos2 message
+  playerZoneSelections.computeIfAbsent(player.getUniqueId(), k -> new HashMap<>()).computeIfAbsent(zoneNameForPos, k -> new HashMap<>()).put(posType, player.getLocation());
+  player.sendMessage(getMessage("player-wand-pos" + posType.substring(3) + "-set").replace("{location}", formatLocation(player.getLocation())));
   playerWandPos1.remove(player.getUniqueId());
   playerWandPos2.remove(player.getUniqueId());
  }
 
  private void handleDefineCommand(Player player, String[] args) {
   if (args.length < 2) {
-   player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} define <zone_name>"));
+   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " define <zone_name>"));
    return;
   }
   String zoneToDefine = args[1];
   Location p1 = playerWandPos1.get(player.getUniqueId());
   Location p2 = playerWandPos2.get(player.getUniqueId());
 
-  if (p1 == null || p2 == null) { // Check if wand selections exist first
-   Map<String, Location> playerSelectionsMap = playerZoneSelections.getOrDefault(player.getUniqueId(), Collections.emptyMap()).get(zoneToDefine);
-   if (playerSelectionsMap == null || !playerSelectionsMap.containsKey("pos1") || !playerSelectionsMap.containsKey("pos2")) {
-    player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."You must set both positions for zone '\{zoneToDefine}' first using the wand or /\{COMMAND_NAME} \{zoneToDefine} pos1 and /\{COMMAND_NAME} \{zoneToDefine} pos2."));
+  if (p1 == null || p2 == null) {
+   Map<String, Location> playerSelections = playerZoneSelections.getOrDefault(player.getUniqueId(), Collections.emptyMap()).get(zoneToDefine);
+   if (playerSelections == null || !playerSelections.containsKey("pos1") || !playerSelections.containsKey("pos2")) {
+    player.sendMessage(getMessage("player-command-usage").replace("{usage}", "You must set both positions for zone '" + zoneToDefine + "' first using the wand or /" + COMMAND_NAME + " " + zoneToDefine + " pos1 and /" + COMMAND_NAME + " " + zoneToDefine + " pos2."));
     return;
    }
-   p1 = playerSelectionsMap.get("pos1");
-   p2 = playerSelectionsMap.get("pos2");
-   player.sendMessage(ChatColor.AQUA + "Using manual selections for zone '" + zoneToDefine + "'.");
+   p1 = playerSelections.get("pos1");
+   p2 = playerSelections.get("pos2");
+   player.sendMessage(getMessage("player-define-zone-manual-selection").replace("{zone_name}", zoneToDefine));
   } else {
-   player.sendMessage(ChatColor.AQUA + "Using wand selections for zone '" + zoneToDefine + "'.");
+   player.sendMessage(getMessage("player-define-zone-wand-selection").replace("{zone_name}", zoneToDefine));
   }
 
   if (!p1.getWorld().equals(p2.getWorld())) {
@@ -735,13 +479,17 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
    return;
   }
 
-  // Preserve existing deny-placement setting if zone already exists, otherwise default to false
-  boolean currentDenySetting = false;
+  // Preserve existing settings or use defaults
+  ZoneAction currentDefaultAction = ZoneAction.ALERT;
+  Map<Material, ZoneAction> currentMaterialActions = new HashMap<>();
+
   if (definedZones.containsKey(zoneToDefine)) {
-   currentDenySetting = definedZones.get(zoneToDefine).shouldDenyPlacement();
+   AutoInformZone existingZone = definedZones.get(zoneToDefine);
+   currentDefaultAction = existingZone.getDefaultAction();
+   currentMaterialActions.putAll(existingZone.getMaterialSpecificActions());
   }
 
-  definedZones.put(zoneToDefine, new AutoInformZone(zoneToDefine, p1.getWorld(), p1, p2, currentDenySetting));
+  definedZones.put(zoneToDefine, new AutoInformZone(zoneToDefine, p1.getWorld(), p1, p2, currentDefaultAction, currentMaterialActions));
   saveZonesToConfig();
   player.sendMessage(getMessage("player-define-zone-success")
           .replace("{zone_name}", zoneToDefine)
@@ -749,7 +497,7 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
   player.sendMessage(getMessage("player-define-zone-corners")
           .replace("{corner1_loc}", formatLocation(p1))
           .replace("{corner2_loc}", formatLocation(p2)));
-  player.sendMessage(getMessage("player-define-zone-deny-setting").replace("{default_action}", String.valueOf(currentDenySetting)));
+  player.sendMessage(getMessage("player-define-zone-deny-setting").replace("{default_action}", currentDefaultAction.name()));
 
   playerWandPos1.remove(player.getUniqueId());
   playerWandPos2.remove(player.getUniqueId());
@@ -763,7 +511,7 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
 
  private void handleRemoveCommand(Player player, String[] args) {
   if (args.length < 2) {
-   player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} remove <zone_name>"));
+   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " remove <zone_name>"));
    return;
   }
   String zoneToRemove = args[1];
@@ -775,28 +523,17 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
   }
  }
 
- private void handleInfoCommand(Player player, String[] args) {
-  if (args.length == 2) {
-   String zoneInfoName = args[1];
-   AutoInformZone zoneInfo = definedZones.get(zoneInfoName);
-   if (zoneInfo != null) {
-    player.sendMessage(getMessage("player-zone-info-header").replace("{zone_name}", zoneInfo.getName()));
-    player.sendMessage(getMessage("player-zone-info-world").replace("{world_name}", zoneInfo.getWorld().getName()));
-    player.sendMessage(getMessage("player-zone-info-corner1").replace("{corner1_loc}", formatLocation(zoneInfo.getCorner1())));
-    player.sendMessage(getMessage("player-zone-info-corner2").replace("{corner2_loc}", formatLocation(zoneInfo.getCorner2())));
-    player.sendMessage(getMessage("player-zone-info-deny-setting").replace("{default_action}", String.valueOf(zoneInfo.shouldDenyPlacement())));
-   } else {
-    player.sendMessage(getMessage("player-zone-not-found").replace("{zone_name}", zoneInfoName));
-   }
-  } else { // No zone name specified, list all
-   if (definedZones.isEmpty()) {
-    player.sendMessage(getMessage("player-no-zones-defined"));
-   } else {
-    player.sendMessage(getMessage("player-all-zones-header"));
-    definedZones.values().forEach(zone ->
-            player.sendMessage(ChatColor.GOLD + STR."- \{zone.getName()}: " + ChatColor.WHITE + STR."World: \{zone.getWorld().getName()}, Deny: \{zone.shouldDenyPlacement()}")
-    );
-   }
+ private void handleInfoCommand(Player player) { // Removed String[] args
+  if (definedZones.isEmpty()) {
+   player.sendMessage(getMessage("player-no-zones-defined"));
+  } else {
+   player.sendMessage(getMessage("player-all-zones-header"));
+   definedZones.values().forEach(zone ->
+           player.sendMessage(getMessage("player-zone-list-entry")
+                   .replace("{zone_name}", zone.getName())
+                   .replace("{world_name}", zone.getWorld().getName())
+                   .replace("{default_action}", zone.getDefaultAction().name()))
+   );
   }
  }
 
@@ -810,20 +547,14 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
  }
 
  private void handleReloadCommand(CommandSender sender) {
-  reloadConfig(); // Reload main config.yml
-  loadCustomConfig(); // Reload messages.yml
-  // setupCoreProtect(); // This is now handled by getCoreProtectAPI()
-  coreProtectAPI = getCoreProtectAPI(); // Re-fetch CoreProtect API
+  loadMessagesFromConfig(); // Reload messages first
   loadZonesFromConfig();
   loadBannedMaterialsFromConfig();
-  regions.clear(); // Clear existing regions
-  loadRegions(); // Load fresh regions from config
-
   sender.sendMessage(getMessage("plugin-config-reloaded"));
-  if (definedZones.isEmpty() && regions.isEmpty()) { // Check both zone types
-   sender.sendMessage(getMessage("plugin-warning-no-zones"));
+  if (definedZones.isEmpty()) {
+   sender.sendMessage(getMessage("plugin-warning-no-zones-old").replace("{command}", COMMAND_NAME));
   } else {
-   sender.sendMessage(getMessage("plugin-success-zones-loaded-old").replace("{count}", String.valueOf(definedZones.size())) + " and " + getMessage("plugin-success-regions-loaded").replace("{count}", String.valueOf(regions.size())));
+   sender.sendMessage(getMessage("plugin-success-zones-loaded-old").replace("{count}", String.valueOf(definedZones.size())));
   }
   sender.sendMessage(getMessage("plugin-current-banned-materials").replace("{materials}", formatMaterialList(bannedMaterials)));
  }
@@ -836,14 +567,14 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
 
  private void handleBannedCommand(Player player, String[] args) {
   if (args.length < 2) {
-   player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} banned <add|remove|list> [material_name]"));
+   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " banned <add|remove|list> [material_name]"));
    return;
   }
   String bannedAction = args[1].toLowerCase();
   switch (bannedAction) {
    case "add":
     if (args.length < 3) {
-     player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} banned add <material_name>"));
+     player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " banned add <material_name>"));
      return;
     }
     String materialToAdd = args[2].toUpperCase();
@@ -861,7 +592,7 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
     break;
    case "remove":
     if (args.length < 3) {
-     player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} banned remove <material_name>"));
+     player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " banned remove <material_name>"));
      return;
     }
     String materialToRemove = args[2].toUpperCase();
@@ -882,30 +613,28 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
      player.sendMessage(getMessage("player-no-materials-banned"));
     } else {
      player.sendMessage(getMessage("player-banned-materials-header"));
-     player.sendMessage(ChatColor.WHITE + formatMaterialList(bannedMaterials));
+     player.sendMessage(formatMaterialList(bannedMaterials)); // This is implicitly prefixed by getMessage()
     }
     break;
    default:
-    player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} banned <add|remove|list>"));
+    player.sendMessage(getMessage("player-banned-unknown-subcommand").replace("{command_name}", COMMAND_NAME));
     break;
   }
  }
 
- private void handleDenyCommand(Player player, String[] args) {
+ private void handleDefaultActionCommand(Player player, String[] args) {
   if (args.length < 3) {
-   player.sendMessage(getMessage("player-command-usage").replace("{usage}", STR."/\{COMMAND_NAME} deny <zone_name> <true|false>"));
+   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " defaultaction <zone_name> <DENY|ALERT|ALLOW>"));
    return;
   }
   String zoneName = args[1];
-  String valueString = args[2].toLowerCase();
-  boolean denyValue;
+  String actionString = args[2].toUpperCase();
+  ZoneAction newDefaultAction;
 
-  if ("true".equals(valueString)) {
-   denyValue = true;
-  } else if ("false".equals(valueString)) {
-   denyValue = false;
-  } else {
-   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "Invalid value. Please use 'true' or 'false'."));
+  try {
+   newDefaultAction = ZoneAction.valueOf(actionString);
+  } catch (IllegalArgumentException e) {
+   player.sendMessage(getMessage("player-invalid-action-type"));
    return;
   }
 
@@ -915,211 +644,93 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
    return;
   }
 
-  // Create a new AutoInformZone object with the updated denyPlacement setting
-  // AutoInformZone is immutable, so we create a new instance
   AutoInformZone updatedZone = new AutoInformZone(
           existingZone.getName(),
           existingZone.getWorld(),
           existingZone.getCorner1(),
           existingZone.getCorner2(),
-          denyValue
+          newDefaultAction,
+          existingZone.getMaterialSpecificActions()
   );
   definedZones.put(zoneName, updatedZone);
   saveZonesToConfig();
-  player.sendMessage(getMessage("player-deny-setting-updated").replace("{zone_name}", zoneName).replace("{action}", String.valueOf(denyValue)));
+  player.sendMessage(getMessage("player-deny-setting-updated").replace("{zone_name}", zoneName).replace("{action}", newDefaultAction.name()));
  }
 
- // --- New Command Handler for RegionSubCommand ---
- private void handleRegionCommand(Player player, String[] args) {
-  if (args.length < 1) {
-   sendRegionHelpMessage(player); // Send specific help for region commands
+ private void handleSetActionCommand(Player player, String[] args) {
+  if (args.length < 4) {
+   player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/" + COMMAND_NAME + " setaction <zone_name> <material> <DENY|ALERT|ALLOW>"));
+   return;
+  }
+  String zoneName = args[1];
+  String materialName = args[2].toUpperCase();
+  String actionString = args[3].toUpperCase();
+
+  Material material;
+  ZoneAction action;
+
+  try {
+   material = Material.valueOf(materialName);
+  } catch (IllegalArgumentException e) {
+   player.sendMessage(getMessage("player-invalid-material-name").replace("{material}", materialName));
    return;
   }
 
-  String subCommand = args[0].toLowerCase();
-  // Shift args for region subcommands
-  String[] regionArgs = Arrays.copyOfRange(args, 1, args.length);
-
-  switch (subCommand) {
-   case "select":
-    if (regionArgs.length < 1) {
-     player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/autowarn region select <name>"));
-     return;
-    }
-    String regionName = regionArgs[0];
-    if (regions.containsKey(regionName)) {
-     player.sendMessage(getMessage("region-name-exists").replace("{name}", regionName));
-     return;
-    }
-    RegionSelection selection = playerSelections.getOrDefault(player.getUniqueId(), new RegionSelection(regionName, player.getWorld()));
-    selection.setRegionName(regionName); // Update name in case of ongoing selection
-    selection.setWorld(player.getWorld()); // Ensure correct world
-    playerSelections.put(player.getUniqueId(), selection);
-    player.sendMessage(getMessage("region-selection-started").replace("{name}", regionName));
-    player.sendMessage(getMessage("region-selection-prompt-pos1"));
-    break;
-   case "pos1":
-    RegionSelection selection1 = playerSelections.get(player.getUniqueId());
-    if (selection1 == null || !selection1.getWorld().equals(player.getWorld())) {
-     player.sendMessage(getMessage("region-no-active-selection"));
-     return;
-    }
-    selection1.setPos1(player.getLocation().getBlock().getLocation());
-    player.sendMessage(getMessage("region-pos1-set").replace("{location}", formatLocation(selection1.getPos1())));
-    if (selection1.isComplete()) {
-     createRegionFromSelection(player, selection1);
-    } else {
-     player.sendMessage(getMessage("region-selection-prompt-pos2"));
-    }
-    break;
-   case "pos2":
-    RegionSelection selection2 = playerSelections.get(player.getUniqueId());
-    if (selection2 == null || !selection2.getWorld().equals(player.getWorld())) {
-     player.sendMessage(getMessage("region-no-active-selection"));
-     return;
-    }
-    selection2.setPos2(player.getLocation().getBlock().getLocation());
-    player.sendMessage(getMessage("region-pos2-set").replace("{location}", formatLocation(selection2.getPos2())));
-    if (selection2.isComplete()) {
-     createRegionFromSelection(player, selection2);
-    } else {
-     player.sendMessage(getMessage("region-selection-prompt-pos1"));
-    }
-    break;
-   case "create":
-    String createRegionName = (regionArgs.length > 0) ? regionArgs[0] : null;
-    RegionSelection createSelection = playerSelections.get(player.getUniqueId());
-    if (createSelection == null || !createSelection.isComplete()) {
-     player.sendMessage(getMessage("region-selection-incomplete"));
-     return;
-    }
-    if (createRegionName == null || createRegionName.isEmpty()) {
-     createRegionName = createSelection.getRegionName();
-    } else {
-     createSelection.setRegionName(createRegionName);
-    }
-
-    if (regions.containsKey(createRegionName)) {
-     player.sendMessage(getMessage("region-name-exists").replace("{name}", createRegionName));
-     return;
-    }
-    createRegionFromSelection(player, createSelection);
-    break;
-   case "delete":
-    if (regionArgs.length < 1) {
-     player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/autowarn region delete <name>"));
-     return;
-    }
-    String deleteRegionName = regionArgs[0];
-    if (!regions.containsKey(deleteRegionName)) {
-     player.sendMessage(getMessage("region-not-found").replace("{name}", deleteRegionName));
-     return;
-    }
-    regions.remove(deleteRegionName);
-    saveRegions();
-    player.sendMessage(getMessage("region-deleted").replace("{name}", deleteRegionName));
-    break;
-   case "list":
-    if (regions.isEmpty()) {
-     player.sendMessage(getMessage("region-list-empty"));
-     return;
-    }
-    player.sendMessage(getMessage("region-list-header").replace("{count}", String.valueOf(regions.size())));
-    for (Region reg : regions.values()) {
-     player.sendMessage(getMessage("region-list-entry")
-             .replace("{name}", reg.getName())
-             .replace("{world}", reg.getWorldName())
-             .replace("{min}", String.format("%.0f,%.0f,%.0f", reg.getMin().getX(), reg.getMin().getY(), reg.getMin().getZ()))
-             .replace("{max}", String.format("%.0f,%.0f,%.0f", reg.getMax().getX(), reg.getMax().getY(), reg.getMax().getZ())));
-    }
-    break;
-   case "info":
-    if (regionArgs.length < 1) {
-     player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/autowarn region info <name>"));
-     return;
-    }
-    String infoRegionName = regionArgs[0];
-    Region infoRegion = regions.get(infoRegionName);
-    if (infoRegion == null) {
-     player.sendMessage(getMessage("region-not-found").replace("{name}", infoRegionName));
-     return;
-    }
-
-    player.sendMessage(getMessage("region-info-header").replace("{name}", infoRegion.getName()));
-    player.sendMessage(getMessage("region-info-world").replace("{world}", infoRegion.getWorldName()));
-    player.sendMessage(getMessage("region-info-coords")
-            .replace("{min}", String.format("%.0f,%.0f,%.0f", infoRegion.getMin().getX(), infoRegion.getMin().getY(), infoRegion.getMin().getZ()))
-            .replace("{max}", String.format("%.0f,%.0f,%.0f", infoRegion.getMax().getX(), infoRegion.getMax().getY(), infoRegion.getMax().getZ())));
-
-    player.sendMessage(getMessage("region-info-banned-blocks")
-            .replace("{list}", infoRegion.getBannedBlockPlacement().isEmpty() ? "None" :
-                    infoRegion.getBannedBlockPlacement().stream().map(Enum::name).collect(Collectors.joining(", "))));
-    player.sendMessage(getMessage("region-info-ban-chest-interaction")
-            .replace("{status}", infoRegion.isBanChestInteraction() ? "Yes" : "No"));
-    player.sendMessage(getMessage("region-info-banned-items")
-            .replace("{list}", infoRegion.getBannedItemUsage().isEmpty() ? "None" :
-                    infoRegion.getBannedItemUsage().stream().map(Enum::name).collect(Collectors.joining(", "))));
-    break;
-   // GUI command will be added here later
-   // case "gui":
-   //     if (regionArgs.length < 1) {
-   //         player.sendMessage(getMessage("player-command-usage").replace("{usage}", "/autowarn region gui <name>"));
-   //         return;
-   //     }
-   //     String guiRegionName = regionArgs[0];
-   //     Region guiRegion = regions.get(guiRegionName);
-   //     if (guiRegion == null) {
-   //         player.sendMessage(getMessage("region-not-found").replace("{name}", guiRegionName));
-   //         return;
-   //     }
-   //     // Open GUI for guiRegion
-   //     break;
-   default:
-    sendRegionHelpMessage(player);
-    break;
+  try {
+   action = ZoneAction.valueOf(actionString);
+  } catch (IllegalArgumentException e) {
+   player.sendMessage(getMessage("player-invalid-action-type"));
+   return;
   }
- }
 
- private void createRegionFromSelection(Player player, RegionSelection selection) {
-  Region newRegion = new Region(selection.getRegionName(), selection.getWorld(), selection.getPos1().toVector(), selection.getPos2().toVector());
-  regions.put(newRegion.getName(), newRegion);
-  saveRegions();
-  playerSelections.remove(player.getUniqueId()); // Clear selection
-  player.sendMessage(getMessage("region-created")
-          .replace("{name}", newRegion.getName())
-          .replace("{world}", newRegion.getWorldName())
-          .replace("{min}", formatLocation(newRegion.getMin().toLocation(newRegion.getWorld())))
-          .replace("{max}", formatLocation(newRegion.getMax().toLocation(newRegion.getWorld()))));
+  AutoInformZone existingZone = definedZones.get(zoneName);
+  if (existingZone == null) {
+   player.sendMessage(getMessage("player-zone-not-found").replace("{zone_name}", zoneName));
+   return;
+  }
+
+  Map<Material, ZoneAction> updatedMaterialActions = new HashMap<>(existingZone.getMaterialSpecificActions());
+  updatedMaterialActions.put(material, action);
+
+  AutoInformZone updatedZone = new AutoInformZone(
+          existingZone.getName(),
+          existingZone.getWorld(),
+          existingZone.getCorner1(),
+          existingZone.getCorner2(),
+          existingZone.getDefaultAction(),
+          updatedMaterialActions
+  );
+  definedZones.put(zoneName, updatedZone);
+  saveZonesToConfig();
+  player.sendMessage(getMessage("player-material-action-updated")
+          .replace("{material}", material.name())
+          .replace("{zone_name}", zoneName)
+          .replace("{action}", action.name()));
  }
 
 
  @Override
  public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String alias, @NotNull String[] args) {
-  if (!cmd.getName().equalsIgnoreCase(COMMAND_NAME) && !cmd.getName().equalsIgnoreCase("autoinform") && !cmd.getName().equalsIgnoreCase("aw")) {
+  if (!cmd.getName().equalsIgnoreCase(COMMAND_NAME) && !cmd.getName().equalsIgnoreCase("ainform")) {
    return Collections.emptyList();
   }
 
-  if (!sender.hasPermission(PERMISSION_ADMIN_SET) && !sender.hasPermission("alexxautowarn.region.admin")) {
+  if (!sender.hasPermission(PERMISSION_ADMIN_SET)) {
    return Collections.emptyList();
   }
 
   if (args.length == 1) {
-   List<String> subCommands = new ArrayList<>(List.of("wand", "pos1", "pos2", "define", "remove", "info", "list", "reload", "clearwand", "banned", "deny", "region"));
-   return subCommands.stream()
+   return Arrays.asList("wand", "pos1", "pos2", "define", "remove", "info", "list", "reload", "clearwand", "banned", "defaultaction", "setaction").stream()
            .filter(s -> s.startsWith(args[0].toLowerCase()))
            .collect(Collectors.toList());
   } else if (args.length == 2) {
    String subCommand = args[0].toLowerCase();
-   if (subCommand.equals("pos1") || subCommand.equals("pos2") || subCommand.equals("define") || subCommand.equals("remove") || subCommand.equals("info") || subCommand.equals("deny")) {
+   if (Arrays.asList("pos1", "pos2", "define", "remove", "info", "defaultaction", "setaction").contains(subCommand)) {
     return definedZones.keySet().stream()
             .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
             .collect(Collectors.toList());
    } else if (subCommand.equals("banned")) {
     return Arrays.asList("add", "remove", "list").stream()
-            .filter(s -> s.startsWith(args[1].toLowerCase()))
-            .collect(Collectors.toList());
-   } else if (subCommand.equals("region")) {
-    return Arrays.asList("select", "pos1", "pos2", "create", "delete", "list", "info", "gui").stream()
             .filter(s -> s.startsWith(args[1].toLowerCase()))
             .collect(Collectors.toList());
    }
@@ -1128,272 +739,137 @@ public class AlexxAutoWarn extends JavaPlugin implements Listener, CommandExecut
    if (subCommand.equals("banned")) {
     String bannedAction = args[1].toLowerCase();
     if (bannedAction.equals("add")) {
-     return Arrays.stream(Material.values())
-             .map(Enum::name)
-             .filter(s -> s.startsWith(args[2].toUpperCase()))
-             .collect(Collectors.toList());
+     return Arrays.stream(Material.values()).map(Enum::name).filter(s -> s.startsWith(args[2].toUpperCase())).collect(Collectors.toList());
     } else if (bannedAction.equals("remove")) {
-     return bannedMaterials.stream()
-             .map(Enum::name)
-             .filter(s -> s.startsWith(args[2].toUpperCase()))
-             .collect(Collectors.toList());
+     return bannedMaterials.stream().map(Enum::name).filter(s -> s.startsWith(args[2].toUpperCase())).collect(Collectors.toList());
     }
-   } else if (subCommand.equals("deny")) {
-    return Arrays.asList("true", "false").stream()
-            .filter(s -> s.startsWith(args[2].toLowerCase()))
+   } else if (subCommand.equals("defaultaction")) {
+    return Arrays.asList("DENY", "ALERT", "ALLOW").stream()
+            .filter(s -> s.startsWith(args[2].toUpperCase()))
             .collect(Collectors.toList());
-   } else if (subCommand.equals("region")) {
-    String regionSubCommand = args[1].toLowerCase();
-    if (regionSubCommand.equals("select") || regionSubCommand.equals("delete") || regionSubCommand.equals("info") || regionSubCommand.equals("gui")) {
-     return regions.keySet().stream()
-             .filter(s -> s.toLowerCase().startsWith(args[2].toLowerCase()))
-             .collect(Collectors.toList());
-    }
+   } else if (subCommand.equals("setaction")) {
+    return Arrays.stream(Material.values()).map(Enum::name).filter(s -> s.startsWith(args[2].toUpperCase())).collect(Collectors.toList());
    }
-  } else if (args.length == 4 && args[0].equalsIgnoreCase("region")) {
-   String regionSubCommand = args[1].toLowerCase();
-   if (regionSubCommand.equals("create")) {
-    // Suggest existing region names for 'create' if user wants to use existing name
-    return regions.keySet().stream()
-            .filter(s -> s.toLowerCase().startsWith(args[3].toLowerCase()))
-            .collect(Collectors.toList());
-   }
+  } else if (args.length == 4 && args[0].equalsIgnoreCase("setaction")) {
+   return Arrays.asList("DENY", "ALERT", "ALLOW").stream()
+           .filter(s -> s.startsWith(args[3].toUpperCase()))
+           .collect(Collectors.toList());
   }
   return Collections.emptyList();
  }
 
- /**
-  * Sends the main help message to the player.
-  * @param player The player to send the message to.
-  */
+ /** Sends the help message to the player. */
  private void sendHelpMessage(Player player) {
-  player.sendMessage(ChatColor.AQUA + "--- AutoInform Setter Help ---");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} wand" + ChatColor.WHITE + " - Get the selection wand.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} <zone_name> pos1" + ChatColor.WHITE + " - Set first zone corner (manual).");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} <zone_name> pos2" + ChatColor.WHITE + " - Set second zone corner (manual).");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} <zone_name> define" + ChatColor.WHITE + " - Define/update <zone_name> using wand or manual selections.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} <zone_name> deny <true|false>" + ChatColor.WHITE + " - Toggle placement denial for a zone.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} remove <zone_name>" + ChatColor.WHITE + " - Remove a defined zone.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} info [zone_name]" + ChatColor.WHITE + " - Show info for a specific zone or all zones.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} list" + ChatColor.WHITE + " - List all defined zones.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} clearwand" + ChatColor.WHITE + " - Clear your wand selections.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} reload" + ChatColor.WHITE + " - Reload all zones and banned materials from config.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} banned <add|remove|list>" + ChatColor.WHITE + " - Manage banned materials.");
-  player.sendMessage(ChatColor.GOLD + STR."/\{COMMAND_NAME} region <subcommand>" + ChatColor.WHITE + " - Manage custom regions (block, chest, item bans).");
-  player.sendMessage(ChatColor.YELLOW + "Note: Placement will be denied in zones set to 'deny-placement: true'. Otherwise, staff will be alerted.");
+  player.sendMessage(getMessage("main-help-header"));
+  player.sendMessage(getMessage("main-help-wand").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-pos1").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-pos2").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-define").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-deny").replace("{command}", COMMAND_NAME)); // This message is for the old 'deny' command, not 'defaultaction'
+  player.sendMessage(getMessage("main-help-remove").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-info").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-list").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-clearwand").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-reload").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-banned").replace("{command}", COMMAND_NAME));
+  player.sendMessage(getMessage("main-help-region").replace("{command}", COMMAND_NAME)); // This is for the new region system, but the code doesn't have it yet.
+  player.sendMessage(getMessage("main-help-note"));
  }
 
- /**
-  * Sends the help message for region specific commands to the player.
-  * @param player The player to send the message to.
-  */
- private void sendRegionHelpMessage(Player player) {
-  player.sendMessage(ChatColor.AQUA + "--- AutoInform Region Management Help ---");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region select <name>" + ChatColor.WHITE + " - Start selection for a new region.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region pos1" + ChatColor.WHITE + " - Set first position of the region to your current location.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region pos2" + ChatColor.WHITE + " - Set second position of the region to your current location.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region create [name]" + ChatColor.WHITE + " - Create a region from your selection.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region delete <name>" + ChatColor.WHITE + " - Delete an existing region.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region list" + ChatColor.WHITE + " - List all defined regions.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region info <name>" + ChatColor.WHITE + " - Show detailed info for a region.");
-  player.sendMessage(ChatColor.GOLD + "/autowarn region gui <name>" + ChatColor.WHITE + " - Open GUI for region configuration (coming soon).");
- }
-
- /**
-  * Formats a Location object into a readable string.
-  * @param loc The location to format.
-  * @return A formatted string representation of the location.
-  */
+ /** Formats a Location object into a readable string. */
  private String formatLocation(Location loc) {
   if (loc == null) return "N/A";
   return String.format("X: %.1f, Y: %.1f, Z: %.1f (World: %s)", loc.getX(), loc.getY(), loc.getZ(), loc.getWorld().getName());
  }
 
- /**
-  * Formats a set of Materials into a comma-separated string.
-  * @param materials The set of materials to format.
-  * @return A string representation of the materials.
-  */
+ /** Formats a set of Materials into a comma-separated string. */
  private String formatMaterialList(Set<Material> materials) {
-  if (materials.isEmpty()) {
-   return "None";
-  }
-  return materials.stream()
-          .map(Enum::name)
-          .collect(Collectors.joining(", "));
+  if (materials.isEmpty()) return "None";
+  return materials.stream().map(Enum::name).collect(Collectors.joining(", "));
+ }
+}
+
+/**
+ * Defines the possible actions for a material within a zone.
+ */
+enum ZoneAction {
+ DENY,
+ ALERT,
+ ALLOW
+}
+
+/**
+ * Represents a defined AutoInform zone with two corners, a world,
+ * a default action, and material-specific actions. This class is immutable.
+ */
+class AutoInformZone {
+ private final String name;
+ private final World world;
+ private final Location corner1;
+ private final Location corner2;
+ private final ZoneAction defaultAction;
+ private final Map<Material, ZoneAction> materialSpecificActions;
+
+ /**
+  * Constructs a new AutoInformZone.
+  * @param name The unique name of the zone.
+  * @param world The world the zone is in.
+  * @param corner1 The first corner of the zone.
+  * @param corner2 The second corner of the zone.
+  * @param defaultAction The default action for materials not explicitly defined.
+  * @param materialSpecificActions A map of materials to their specific actions within this zone.
+  */
+ public AutoInformZone(@NotNull String name, @NotNull World world, @NotNull Location corner1, @NotNull Location corner2,
+                       @NotNull ZoneAction defaultAction, @NotNull Map<Material, ZoneAction> materialSpecificActions) {
+  this.name = Objects.requireNonNull(name, "Zone name cannot be null");
+  this.world = Objects.requireNonNull(world, "Zone world cannot be null");
+  this.corner1 = Objects.requireNonNull(corner1, "Zone corner1 cannot be null");
+  this.corner2 = Objects.requireNonNull(corner2, "Zone corner2 cannot be null");
+  this.defaultAction = Objects.requireNonNull(defaultAction, "Default action cannot be null");
+  this.materialSpecificActions = Collections.unmodifiableMap(new HashMap<>(Objects.requireNonNull(materialSpecificActions, "Material specific actions map cannot be null")));
  }
 
- // --- Inner Class: Region (from Region.java) ---
- @SerializableAs("AlexxAutoWarnRegion")
- public static class Region implements ConfigurationSerializable {
+ public String getName() { return name; }
+ public World getWorld() { return world; }
+ public Location getCorner1() { return corner1; }
+ public Location getCorner2() { return corner2; }
+ public ZoneAction getDefaultAction() { return defaultAction; }
+ public Map<Material, ZoneAction> getMaterialSpecificActions() { return materialSpecificActions; }
 
-  private String name;
-  private String worldName;
-  private World world;
-  private Vector min;
-  private Vector max;
+ /** Checks if a given location is within this zone's bounding box. */
+ public boolean contains(@NotNull Location loc) {
+  if (!loc.getWorld().equals(this.world)) return false;
 
-  private List<Material> bannedBlockPlacement;
-  private boolean banChestInteraction;
-  private List<Material> bannedItemUsage;
+  double x = loc.getX();
+  double y = loc.getY();
+  double z = loc.getZ();
 
-  public Region(String name, World world, Vector pos1, Vector pos2) {
-   this.name = name;
-   this.world = world;
-   this.worldName = world.getName();
-   this.min = Vector.getMinimum(pos1, pos2);
-   this.max = Vector.getMaximum(pos1, pos2);
+  double minX = Math.min(corner1.getX(), corner2.getX());
+  double minY = Math.min(corner1.getY(), corner2.getY());
+  double minZ = Math.min(corner1.getZ(), corner2.getZ());
 
-   this.bannedBlockPlacement = new ArrayList<>();
-   this.banChestInteraction = false;
-   this.bannedItemUsage = new ArrayList<>();
-  }
+  double maxX = Math.max(corner1.getX(), corner2.getX());
+  double maxY = Math.max(corner1.getY(), corner2.getY());
+  double maxZ = Math.max(corner1.getZ(), corner2.getZ());
 
-  // Constructor for deserialization from config
-  public Region(Map<String, Object> map) {
-   this.name = (String) map.get("name");
-   this.worldName = (String) map.get("world");
-   this.world = Bukkit.getWorld(worldName); // Attempt to get world
-   this.min = (Vector) map.get("min");
-   this.max = (Vector) map.get("max");
-
-   this.bannedBlockPlacement = ((List<?>) map.getOrDefault("banned_block_placement", new ArrayList<>()))
-           .stream()
-           .map(obj -> Material.valueOf((String) obj))
-           .collect(Collectors.toList());
-   this.banChestInteraction = (boolean) map.getOrDefault("ban_chest_interaction", false);
-   this.bannedItemUsage = ((List<?>) map.getOrDefault("banned_item_usage", new ArrayList<>()))
-           .stream()
-           .map(obj -> Material.valueOf((String) obj))
-           .collect(Collectors.toList());
-
-   if (this.world == null) {
-    Bukkit.getLogger().warning("AlexxAutoWarn: Region '" + name + "' refers to non-existent world: " + worldName);
-   }
-  }
-
-  @Override
-  public Map<String, Object> serialize() {
-   Map<String, Object> map = new HashMap<>();
-   map.put("name", name);
-   map.put("world", worldName);
-   map.put("min", min);
-   map.put("max", max);
-   map.put("banned_block_placement", bannedBlockPlacement.stream().map(Enum::name).collect(Collectors.toList()));
-   map.put("ban_chest_interaction", banChestInteraction);
-   map.put("banned_item_usage", bannedItemUsage.stream().map(Enum::name).collect(Collectors.toList()));
-   return map;
-  }
-
-  public String getName() { return name; }
-  public World getWorld() {
-   if (world == null) {
-    world = Bukkit.getWorld(worldName);
-   }
-   return world;
-  }
-  public String getWorldName() { return worldName; }
-  public Vector getMin() { return min; }
-  public Vector getMax() { return max; }
-  public List<Material> getBannedBlockPlacement() { return bannedBlockPlacement; }
-  public boolean isBanChestInteraction() { return banChestInteraction; }
-  public List<Material> getBannedItemUsage() { return bannedItemUsage; }
-
-  public void setBannedBlockPlacement(List<Material> bannedBlockPlacement) { this.bannedBlockPlacement = bannedBlockPlacement; }
-  public void addBannedBlockPlacement(Material material) { if (!this.bannedBlockPlacement.contains(material)) { this.bannedBlockPlacement.add(material); } }
-  public void removeBannedBlockPlacement(Material material) { this.bannedBlockPlacement.remove(material); }
-  public void setBanChestInteraction(boolean banChestInteraction) { this.banChestInteraction = banChestInteraction; }
-  public void setBannedItemUsage(List<Material> bannedItemUsage) { this.bannedItemUsage = bannedItemUsage; }
-  public void addBannedItemUsage(Material material) { if (!this.bannedItemUsage.contains(material)) { this.bannedItemUsage.add(material); } }
-  public void removeBannedItemUsage(Material material) { this.bannedItemUsage.remove(material); }
-
-  public boolean contains(Location loc) {
-   if (!loc.getWorld().getName().equals(worldName)) {
-    return false;
-   }
-   return loc.getX() >= min.getX() && loc.getX() <= max.getX() + 1 &&
-           loc.getY() >= min.getY() && loc.getY() <= max.getY() + 1 &&
-           loc.getZ() >= min.getZ() && loc.getZ() <= max.getZ() + 1;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-   if (this == o) return true;
-   if (o == null || getClass() != o.getClass()) return false;
-   Region region = (Region) o;
-   return Objects.equals(name, region.name);
-  }
-
-  @Override
-  public int hashCode() { return Objects.hash(name); }
+  return (x >= minX && x <= maxX) && (y >= minY && y <= maxY) && (z >= minZ && z <= maxZ);
  }
 
- // --- Inner Class: RegionSelection (from RegionSelection.java) ---
- public static class RegionSelection {
-  private String regionName;
-  private World world;
-  private Location pos1;
-  private Location pos2;
-
-  public RegionSelection(String regionName, World world) {
-   this.regionName = regionName;
-   this.world = world;
-  }
-
-  public String getRegionName() { return regionName; }
-  public World getWorld() { return world; }
-  public Location getPos1() { return pos1; }
-  public void setPos1(Location pos1) { this.pos1 = pos1; }
-  public Location getPos2() { return pos2; }
-  public void setPos2(Location pos2) { this.pos2 = pos2; }
-
-  public void setRegionName(String regionName) { this.regionName = regionName; }
-  public void setWorld(World world) { this.world = world; }
-
-  public boolean isComplete() {
-   return pos1 != null && pos2 != null && pos1.getWorld().equals(pos2.getWorld());
-  }
+ @Override
+ public boolean equals(Object o) {
+  if (this == o) return true;
+  if (o == null || getClass() != o.getClass()) return false;
+  AutoInformZone that = (AutoInformZone) o;
+  return defaultAction == that.defaultAction &&
+          name.equals(that.name) &&
+          world.equals(that.world) &&
+          corner1.equals(that.corner1) &&
+          corner2.equals(that.corner2) &&
+          materialSpecificActions.equals(that.materialSpecificActions);
  }
 
- // Helper to get messages from messages.yml
- public String getMessage(String path) {
-  String message = getCustomConfig().getString(path);
-  if (message == null) {
-   return ChatColor.RED + "Error: Message '" + path + "' not found in messages.yml";
-  }
-  return ChatColor.translateAlternateColorCodes('&', message);
- }
-
- // Load messages.yml
- private void loadCustomConfig() {
-  customConfigFile = new File(getDataFolder(), "messages.yml");
-  if (!customConfigFile.exists()) {
-   saveResource("messages.yml", false);
-  }
-  customConfig = YamlConfiguration.loadConfiguration(customConfigFile);
-
-  // Look for updates from the included messages.yml
-  InputStream defaultStream = getResource("messages.yml");
-  if (defaultStream != null) {
-   YamlConfiguration defaultConfig = YamlConfiguration.loadConfiguration(new InputStreamReader(defaultStream, StandardCharsets.UTF_8));
-   customConfig.setDefaults(defaultConfig);
-   customConfig.options().copyDefaults(true); // Copy missing defaults
-   try {
-    customConfig.save(customConfigFile); // Save updated config
-   } catch (IOException e) {
-    getLogger().log(Level.SEVERE, "Could not save messages.yml!", e);
-   }
-  }
- }
-
- public FileConfiguration getCustomConfig() {
-  return customConfig;
- }
-
- // Helper to setup CoreProtect (moved here for better organization)
- private void setupCoreProtect() {
-  // This method is already called in onEnable and handleReloadCommand.
-  // Its logic is already part of getCoreProtectAPI() so this method is redundant.
-  // Keeping it here for now but it can be removed if getCoreProtectAPI is always used directly.
+ @Override
+ public int hashCode() {
+  return Objects.hash(name, world, corner1, corner2, defaultAction, materialSpecificActions);
  }
 }
